Wed Feb  5 20:25:57 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Fri Nov 22 15:48:02 1996  unknown  <bjaspan@mit.edu>

	* gss-client.c (connect_to_server): use sizeof instead of h_length
 	to determine number of bytes of addr to copy from DNS response
 	[krb5-misc/211]

Sun Oct 27 22:04:59 1996  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Add USE_GSSAPI_LIBRARY

	* Makefile.in (LOCAL_LIBRARIES): Remove as -lgssapi_rpc should
		come from configure.  

Mon Oct 21 20:03:53 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* gss-server.c: Re-added code to test import and export security
 		context.  Yes, yes, I know this isn't the best place to
 		have this test, but DO NOT REMOVE THIS TEST UNTIL WE HAVE
 		IT CODED ELSEWHERE.  Better slightly ugly sample server
 		code than untested (and broken) library code....  Add code
 		to print out the mechanism OID used by accept_sec_context.

	* gss-client.c: Add code to allow user to specify the mechanism
		OID that gss-client should use.

Wed Jun  5 00:08:32 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* gss-client.c (call_server): When reading in the test value from
 		a file, don't free free inbuf.value until after the last
 		place where we use it.

Wed Apr 17 20:54:37 1996  Marc Horowitz  <marc@mit.edu>

	* all files: integrated changes from OpenVision as of
	October 1995

Tue Mar 12 23:46:26 1996  Ken Raeburn  <raeburn@cygnus.com>

	* gss-server.c (timeval_subtract): Use old-style function
	definition.

Sun Mar  3 12:14:48 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gss-server.c (test_import_export_context): Add second argument
		to gettimeofday.

Sat Mar  2 03:03:27 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gss-server.c (sign_server): Do better import/export security
		checking.  If the received message to be signed is not
		printable (at least the first two characters are not),
		display the message in hex.  Print the hex values of the